--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -1,3 +1,32 @@
-# Only ignore Python cache
+##############################################
+# Python caches
+##############################################
 __pycache__/
 *.pyc
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+##############################################
+# Virtual envs / environment files
+##############################################
+.venv/
+venv/
+env/
+.env
+**/.env
+
+##############################################
+# Local data and queues
+##############################################
+api/data/
+edge-relay/queue/
+
+##############################################
+# OS / Editors
+##############################################
+.vscode/
+.idea/
+.history/
+Thumbs.db
+.DS_Store
